--- a/NAICExpenseRegression.ipynb
+++ b/NAICExpenseRegression.ipynb
@@ -13,9 +13,6 @@
     "## SA2 Homework Assignment\n",
     "\n",
     "\n",
-    "#### Submitted By: Amit Kumar Sharma (PGID - 71721079)\n",
-    "\n",
-    "\n",
     "\n",
     "##### Problem Description:<br>\n",
     "Like every other business, insurance companies seek to minimize expenses associated with doing business in order to enhance profitability. To study expenses, we examine a random sample of 384 insurance companies from the National Association of Insurance Commissioners (NAIC) database of over 3,000 companies. The NAIC maintains one of the world’s largest insurance regulatory databases; we consider here data that is based on 2005 annual reports for all the property and casualty insurance companies in United States. The annual reports are financial statements that use statutory accounting principles. \n",
@@ -84,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "library(car)\n",
@@ -101,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = read.csv(\"/Users/a5sharma/Documents/ISB/SA2/Assignment/data/NAICExpense.csv\",header = T,sep=\",\",stringsAsFactors = F, na.strings = c(\"NA\", \"N/A\", \"?\",\"\"))"
@@ -297,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data<-data[,-c(1)]"
@@ -403,7 +406,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Ndata <- data"
@@ -604,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Ndata$AGENTWAGE[is.na(Ndata$AGENTWAGE)] = mean(Ndata$AGENTWAGE, na.rm=TRUE)"
@@ -613,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for (i in seq(1:length(Ndata))){\n",
@@ -862,7 +871,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NumData <- Ndata[,-c(1,2,3)]\n",
@@ -879,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "melted_cormat <- melt(cor_coef)\n",
@@ -1083,7 +1096,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NData1 <- Ndata[,-c(1,2,3,5)]\n",
@@ -1093,7 +1108,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for (i in 1:nrow(cor_coef1)){\n",
@@ -1228,7 +1245,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "set.seed(100)  # setting seed to reproduce results of random sampling\n",
@@ -1563,7 +1582,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1958,7 +1976,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trainingRowIndex1 <- trainingRowIndex[trainingRowIndex != 175 & trainingRowIndex != 209 & trainingRowIndex != 210 & trainingRowIndex != 314 ]\n",
@@ -2503,7 +2523,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trainingData1 <- trainingData\n",
@@ -2778,7 +2800,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3417,7 +3438,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "validationData1 <- validationData\n",
@@ -3464,7 +3487,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
